--- a/css/contactme.css
+++ b/css/contactme.css
@@ -1,23 +1,22 @@
 html,
 body {
-  background-color: #64b5c2; /*цвет монитора */
+  background-color: #ffffff; /*цвет монитора */
   margin: 0;
   padding: 0;
 }
 ul#navigation li {
   display: inline;
-  padding: 20px;
-  margin: 20px;
 }
 h1#test {
-  color: blue;
-  background: coral;
+  color: black;
+  background: #706464;
   border: 1px solid black;
   padding: 100px;
   font-family: "Arial Black", Gadget, sans-serif;
+  margin: 0px;
 }
 nav {
-  background: #a064c2;
+  background: #ffffff;
   font-family: "Comic Sans MS", cursive, sans-serif;
 }
 nav a {
@@ -27,7 +26,27 @@ nav a {
   margin-left: 20px;
 }
 footer {
-  background-color: #a064c2;
+  background-color: #ffffff;
   color: #86c264;
   font-family: Bradley Hand, cursive;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+}
+.content p {
+  font-size: 20px;
+  text-align: center;
+}
+ul {
+  margin: 0px;
+}
+footer p {
+  padding-left: 30px;
+}
+aside {
+  justify-content: center;
+  text-align: center;
+  margin-top: 100px;
 }
