--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@ body {
   background-color: #ffffff; /*цвет монитора */
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 ul#navigation li {
   display: inline;
@@ -18,26 +19,34 @@ h1#test {
 nav {
   background: #ffffff;
   font-family: "Comic Sans MS", cursive, sans-serif;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 nav a {
   color: #86c264;
   text-decoration: none;
   font-size: 30px;
   margin-left: 20px;
+  border-right: 1px double;
+  padding-right: 20px;
 }
 footer {
   background-color: #ffffff;
   color: #86c264;
   font-family: Bradley Hand, cursive;
-  position: absolute;
+  /* position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: 0; */
   width: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
+  margin-top: 300px;
+  height: 50px;
 }
 .content p {
   font-size: 20px;
   text-align: center;
+  min-height: 100%;
+  padding-bottom: 50px;
 }
 ul {
   margin: 0px;
@@ -49,6 +58,7 @@ aside {
   justify-content: center;
   text-align: center;
   margin-top: 100px;
+  margin-bottom: 100px;
 }
 .fa {
   padding: 20px;
@@ -57,6 +67,8 @@ aside {
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
+  margin-left: 1%;
+  margin-right: 1%;
 }
 .fa:hover {
   opacity: 0.7;
@@ -68,4 +80,30 @@ aside {
 .fa-youtube {
   background: red;
   color: #ffffff;
+}
+.fa-steam {
+  background: rgb(17, 17, 114);
+  color: #ffffff;
+}
+.fa-vk {
+  background: rgb(76, 117, 163);
+  color: #ffffff;
+}
+@media only screen and (max-width: 1000px) {
+  body {
+    background-color: lightblue;
+  }
+  ul#navigation li {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 10px;
+    border-bottom: 1px double;
+  }
+  ul#navigation {
+    padding: 0px;
+  }
+  nav a {
+    border: none;
+  }
 }
