--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ h1#test {
 }
 nav {
   background: #ffffff;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: "Comic Sans MS", Gadget, sans-serif;
   margin-top: 15px;
   margin-bottom: 15px;
 }
