--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@ h1#test {
   padding: 100px;
   font-family: "Arial Black", Gadget, sans-serif;
   margin: 0px;
+  font-family: "Rowdies", cursive;
 }
 nav {
   background: #ffffff;
@@ -43,10 +44,11 @@ footer {
   height: 50px;
 }
 .content p {
-  font-size: 20px;
+  font-size: 15px;
   text-align: center;
   min-height: 100%;
   padding-bottom: 50px;
+  font-family: "Roboto Mono", monospace;
 }
 ul {
   margin: 0px;
@@ -59,6 +61,8 @@ aside {
   text-align: center;
   margin-top: 100px;
   margin-bottom: 100px;
+  font-family: "Roboto Mono", monospace;
+  font-size: 15px;
 }
 .fa {
   padding: 20px;
@@ -69,6 +73,7 @@ aside {
   border-radius: 50%;
   margin-left: 1%;
   margin-right: 1%;
+  margin-top: 10px;
 }
 .fa:hover {
   opacity: 0.7;
