--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -15,6 +15,8 @@ h1#test {
   padding: 100px;
   font-family: "Arial Black", Gadget, sans-serif;
   margin: 0px;
+  font-family: "Rowdies", cursive;
+}
 }
 nav {
   background: #ffffff;
@@ -44,6 +46,7 @@ footer {
 .content p {
   font-size: 20px;
   text-align: center;
+  font-family: "Roboto Mono", monospace;
 }
 ul {
   margin: 0px;
@@ -55,16 +58,47 @@ aside {
   justify-content: center;
   text-align: center;
   margin-top: 50px;
-  width: 70%;
-  float: right;
+  /* width: 70%; */
+  float: center;
+  font-family: "Roboto Mono", monospace;
+}
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 20px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-top: 10px;
+}
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-instagram {
+  background: #ec56d3;
+  color: white;
+}
+.fa-youtube {
+  background: red;
+  color: #ffffff;
+}
+.fa-steam {
+  background: rgb(17, 17, 114);
+  color: #ffffff;
+}
+.fa-vk {
+  background: rgb(76, 117, 163);
+  color: #ffffff;
 }
 .img_content {
   float: left;
   width: 20%;
 }
 .text_content {
-  float: right;
-  width: 70%;
+  float: center;
+  /* width: 70%; */
 }
 .content {
   width: 90%;
@@ -74,4 +108,43 @@ aside {
 }
 img {
   style="width:100%;"
+}
+@media only screen and (max-width: 1000px) {
+  body {
+    background-color: white;
+  }
+  ul#navigation li {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 10px;
+    border-bottom: 1px double;
+    width: 90%;
+    border-color: #86c264;
+  }
+  ul#navigation {
+    padding: 0px;
+  }
+  nav a {
+    border: none;
+  }
+  .content p {
+    margin: 0 auto;
+    margin-top: 20px;
+    border-bottom: 1px double;
+    width: 90%;
+    padding-top: 50px;
+    padding-bottom: 70px;
+  }
+  aside {
+    padding-bottom: 70px;
+    margin: 0 auto;
+    width: 90%;
+    padding-top: 50px;
+    border-bottom: 1px double;
+  }
+  footer {
+    margin: 0;
+    margin-top: 10px;
+  }
 }
