--- a/css/index_bootstrap.css
+++ b/css/index_bootstrap.css
@@ -36,3 +36,13 @@ aside {
   background: rgb(76, 117, 163);
   color: #ffffff;
 }
+footer {
+  background-color: #ffffff;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+  margin-top: 300px;
+  margin-bottom: 50px;
+}
