--- a/css/aboutme_bootstrap.css
+++ b/css/aboutme_bootstrap.css
@@ -1,3 +1,10 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 95px;
+}
 .content {
   height: 300px;
 }
@@ -30,13 +37,18 @@
   background: rgb(76, 117, 163);
   color: #ffffff;
 }
+
 footer {
-  background-color: rgb(248, 249, 250);
-  margin-top: -100px;
-  /* height: 200px; */
+  text-align: left;
+  background: rgb(248, 249, 250);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 40px;
   width: 100%;
-  position: relative;
+  overflow: hidden;
 }
+
 body {
   min-height: 100%;
 }
@@ -46,9 +58,13 @@ body {
 .picture {
   height: 80%;
   width: 80%;
+  border-radius: 30px;
 }
+/* p {
+  text-align: justify;
+} */
 @media only screen and (max-width: 1000px) {
-  .aimnoborder {
-    border: none;
+  p {
+    text-align: justify;
   }
 }
