--- a/css/contactme_bootstrap.css
+++ b/css/contactme_bootstrap.css
@@ -1,3 +1,10 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 150px;
+}
 .content {
   height: 300px;
 }
@@ -31,12 +38,17 @@
   color: #ffffff;
 }
 footer {
-  background-color: #ffffff;
+  text-align: left;
+  background: rgb(248, 249, 250);
   position: absolute;
   left: 0;
   bottom: 0;
+  height: 40px;
   width: 100%;
   overflow: hidden;
-  margin-top: 300px;
-  margin-bottom: 50px;
+}
+@media only screen and (max-width: 1000px) {
+  p {
+    text-align: justify;
+  }
 }
